# quadra

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  BREAKING_CHANGES.md  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pylintrc  pyproject.toml  requirements.txt  setup.py  versions.json
dev/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
docs/: gen_ref_pages.py  index.md
docs_overrides/: home.html
hydra_plugins/: quadra_searchpath_plugin.py
latest/: 404.html  getting_started.html  index.html
pre-release/: 404.html  getting_started.html  index.html  sitemap.xml
quadra/: __init__.py  main.py
quadra_hydra_plugin/: pyproject.toml
stable/: index.html
test/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py
v1.0.0/: 404.html  index.html  objects.inv
v1.1.0/: 404.html  getting_started.html  index.html  sitemap.xml
v1.1.1/: 404.html  getting_started.html  index.html  sitemap.xml
v1.1.2/: 404.html  getting_started.html  index.html  sitemap.xml
v1.1.3/: 404.html  getting_started.html  index.html  sitemap.xml
v1.1.4/: 404.html  getting_started.html  index.html  sitemap.xml
v1.2.0/: 404.html  getting_started.html  index.html  sitemap.xml
v1.2.1/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v1.2.2/: 404.html  getting_started.html  index.html  sitemap.xml
v1.2.3/: 404.html  getting_started.html  index.html  sitemap.xml
v1.2.4/: 404.html  getting_started.html  index.html  sitemap.xml
v1.2.5/: 404.html  getting_started.html  index.html  sitemap.xml
v1.2.6/: 404.html  getting_started.html  index.html  sitemap.xml
v1.2.7/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v1.3.0/: 404.html  getting_started.html  index.html  sitemap.xml
v1.3.1/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v1.3.2/: 404.html  getting_started.html  index.html  sitemap.xml
v1.3.3/: 404.html  getting_started.html  index.html  sitemap.xml
v1.3.4/: 404.html  getting_started.html  index.html  sitemap.xml
v1.3.5/: 404.html  getting_started.html  index.html  sitemap.xml
v1.3.6/: 404.html  getting_started.html  index.html  sitemap.xml
v1.3.7/: 404.html  getting_started.html  index.html  sitemap.xml
v1.3.8/: 404.html  getting_started.html  index.html  sitemap.xml
v1.4.0/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v1.4.1/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.0/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.1/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.2/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.3/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.4/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.5/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.6/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.7/: 404.html  getting_started.html  index.html  sitemap.xml
v1.5.8/: 404.html  getting_started.html  index.html  sitemap.xml
v2.0.0/: 404.html  getting_started.html  index.html  sitemap.xml
v2.0.1/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.0.2/: 404.html  getting_started.html  index.html  sitemap.xml
v2.0.3/: 404.html  getting_started.html  index.html  sitemap.xml
v2.0.4/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.0/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.1/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.1.10/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.1.11/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.12/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.13/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.2/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.3/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.4/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.5/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.6/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.7/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.1.8/: 404.html  getting_started.html  index.html  sitemap.xml
v2.1.9/: 404.html  getting_started.html  index.html  sitemap.xml
v2.2.1/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.2.2/: 404.html  getting_started.html  index.html  sitemap.xml
v2.2.3/: 404.html  getting_started.html  index.html  sitemap.xml
v2.2.4/: 404.html  getting_started.html  index.html  sitemap.xml
v2.2.5/: 404.html  getting_started.html  index.html  sitemap.xml
v2.2.6/: 404.html  getting_started.html  index.html  sitemap.xml
v2.2.7/: 404.html  getting_started.html  index.html  sitemap.xml
v2.3.1/: 404.html  getting_started.html  index.html  sitemap.xml
v2.3.2/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.3.3/: 404.html  getting_started.html  index.html  sitemap.xml
v2.4.0/: 404.html  getting_started.html  index.html  sitemap.xml
v2.5.0/: 404.html  getting_started.html  index.html  sitemap.xml
v2.5.1/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.6.0/: 404.html  getting_started.html  index.html  sitemap.xml
v2.6.1/: 404.html  getting_started.html  index.html  sitemap.xml
v2.6.2/: 404.html  getting_started.html  index.html  sitemap.xml
v2.7.0/: 404.html  getting_started.html  index.html  sitemap.xml
v2.7.1/: 404.html  getting_started.html  index.html  sitemap.xml
v2.7.2/: 404.html  getting_started.html  index.html  sitemap.xml
v2.7.3/: 404.html  getting_started.html  index.html  sitemap.xml
v2.8.0/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.8.1/: 404.html  getting_started.html  index.html  objects.inv  sitemap.xml
v2.9.0/: 404.html  gen_ref_pages.py  getting_started.html  index.html  objects.inv  (+2 more)
(+10854 files in other folders)
