[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadra"
version = "1.1.0"
description = "Deep Learning experiment orchestration library"
authors = [
  {name = "Alessandro Polidori", email = "alessandro.polidori@orobix.com"},
  {name = "Federico Belotti", email = "federico.belotti@orobix.com"},
  {name = "Lorenzo Mammana", email = "lorenzo.mammana@orobix.com"},
  {name = "Refik Can Malli", email = "refikcan.malli@orobix.com"},
  {name = "Silvia Bianchetti", email = "silvia.bianchetti@orobix.com"},
]
keywords = ["deep learning", "experiment", "lightning", "hydra-core"]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8,<3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
  # --------- pytorch --------- #
  "torch==1.13.1",
  "torchvision==0.14.1",
  "torchmetrics==0.10.*", # constrained by anomalib
  "torchsummary==1.5.*",
  "pytorch-lightning>=1.9.1,<1.10",
  # --------- hydra --------- #
  "hydra-core==1.3.*",
  "hydra-colorlog==1.2.*",
  "hydra-optuna-sweeper==1.2.*",
  # --------- loggers --------- #
  "mlflow==2.3.1",
  "boto3==1.26.*", # needed for artifact storage
  "minio==7.1.*", # needed for artifact storage
  "tensorboard==2.11.*",
  # --------- others --------- #
  "Pillow==9.3.0", # required by label-studio-converter
  "pandas==1.1.*",
  "opencv-python-headless==4.7.0.*",
  "python-dotenv==0.21.*",
  "rich==13.2.*",
  "scikit-learn==1.2.*",
  "grad-cam==1.4.6",
  "matplotlib==3.6.*",
  "seaborn==0.12.*",
  "albumentations==1.3.*",
  "nvitop==0.11.*",
  "label-studio-converter==0.0.*",
  "scikit-multilearn==0.2.*",
  "tripy==1.0.*",
  "h5py==3.8.*",
  "timm==0.6.12", # required by smp
  "segmentation-models-pytorch==0.3.*",
  "anomalib@git+https://github.com/orobix/anomalib.git@v0.4.0+obx.1.0.1",
  "xxhash==3.2.*",
]

[project.optional-dependencies]
test = [
    "pytest==7.2.*",
    "pytest-cov==4.0.*",
]

dev = [
    "interrogate==1.5.*",
    "black==22.12.*",
    "isort==5.11.*",
    "pre-commit==3.0.*",
    "pylint==2.16.*",
    "bump2version==1.0.*",
    "types-PyYAML==6.0.12.*",
    "mypy==1.0.*",
    "ruff==0.0.257",
    "pandas-stubs==1.5.3.*",
    "bumpver==2023.1124",
    "twine==4.0.*",
    "build==0.10.*"

]

docs = [
    "mkdocs==1.4.3",
    "mkdocs-material==9.1.18",
    "mkdocstrings-python==1.2.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.0",
    "mkdocs-section-index==0.3.5",
    "mike==1.1.2",
    "cairosvg==2.7.0"
]

onnx = [
  "onnx==1.14.0",
  "onnxsim==0.4.28",
  "onnxruntime-gpu==1.15.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["quadra", "quadra.*", "hydra_plugins"]
exclude = ["docs*", "tests*", "build*", "site*"]

[project.scripts]
quadra = "quadra.main:main"

[project.urls]
homepage = "https://orobix.github.io/quadra"
repository = "https://github.com/orobix/quadra"

# Adapted from https://realpython.com/pypi-publish-python-package/#version-your-package
[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "build: Bump version {old_version} -> {new_version}"
commit          = true
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"quadra/__init__.py" = ["{version}"]

# Black formatting
[tool.black]
line_length = 120
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --disable-pytest-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Pytest coverage
[tool.coverage.run]
omit = []

[tool.prettier]
tab_width = 2

[tool.interrogate]
ignore_init_method = true
ignore_init_module = false
ignore_magic = true
ignore_semiprivate = false
ignore_private = false
ignore_module = true
ignore_property_decorators = true
fail_under = 100
verbose = 2
omit_covered_files = false
quiet = false
whitelist_regex = []
color = true
ignore_regex = [
  "^get$", 
  "^mock_.*", 
  ".*BaseClass.*",
  ".*on_train.*",
  ".*on_validation.*",
  ".*on_test.*",
  ".*forward.*",
  ".*backward.*",
  ".*training_step.*",
  ".*validation_step.*",
  ".*test_step.*",
  ".*predict_step.*",
  ".*train_epoch.*",
  ".*validation_epoch.*",
  ".*test_epoch.*",
  ".*on_fit.*",
]
generate-badge = "docs/images"
badge-format = "svg"
exclude = ["docs", "tests", "build", "dist", "local", "scripts"]

[tool.mypy]
# -> Level 1
# custom settings
show_error_codes = true
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
allow_redefinition = true
# suggested settings
# # https://mypy.readthedocs.io/en/stable/existing_code.html?highlight=no_implicit_optional#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# -> Level 2
strict_equality = false
strict_concatenate = false
check_untyped_defs = false

# -> Level 3
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

# -> Level 4
no_implicit_reexport = false
warn_return_any = false
exclude = ["quadra/utils/tests", "tests"]

[tool.ruff]
select = [
    "D",
]
ignore = [
    "D100",
    # this is controlled by interrogate with exlude_regex
    # we can skip it here
    "D102", 
    "D104",
    "D105",
    "D107",
    # no blank line after summary line. This might be not required.
    # usually we violate this rule
    "D205"
]
exclude = [
    "Makefile",
    ".gitignore",
]

[tool.ruff.pydocstyle]
convention = "google"
